Accelerometr is working

--- a/stm32project/Debug/makefile
+++ b/stm32project/Debug/makefile
@@ -47,7 +47,7 @@ all: stm32-WDS.elf secondary-outputs
 
 # Tool invocations
 stm32-WDS.elf: $(OBJS) $(USER_OBJS) /home/marcel/Documents/semestrVI/WDS/stm32project/STM32F303RETX_FLASH.ld
-	arm-none-eabi-gcc -o "stm32-WDS.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/marcel/Documents/semestrVI/WDS/stm32project/STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32-WDS.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "stm32-WDS.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/marcel/Documents/semestrVI/WDS/stm32project/STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32-WDS.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
